@@ -1,11 +1,8 @@
 package ar.edu.utn.dds.k3003.clients;
 
-import ar.edu.utn.dds.k3003.clients.dtos.OCRspaceDTO;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import retrofit2.Retrofit;
 import retrofit2.converter.jackson.JacksonConverterFactory;
-
-import java.util.List;
 
 public class OCRSpaceProxy implements  AnalizadorOCR {
     private final OCRSpaceRetrofitClient service;
@@ -15,7 +12,7 @@ public class OCRSpaceProxy implements  AnalizadorOCR {
 
         var retrofit =
                 new Retrofit.Builder()
-                        .baseUrl("https://two025-tp-entrega-2-francoquiroga01.onrender.com/")
+                        .baseUrl("https://api.ocr.space/")
                         .addConverterFactory(JacksonConverterFactory.create(objectMapper))
                         .build();
 
@@ -25,30 +22,27 @@ public class OCRSpaceProxy implements  AnalizadorOCR {
 
     @Override
     public String analizarImagenURL(String imagenURL) {
-        OCRspaceDTO rta;
         try {
-            var response = service.analizarImagenOCR(imagenURL).execute();
-            if (!response.isSuccessful() && response.body() == null) {
-                throw new RuntimeException("Error al analizar la imagen con OCRSpace");
-            }
+            var response = service.analizarImagenOCR("K89669199988957","eng", false, imagenURL, false, false).execute();
+            if (!response.isSuccessful()) {throw new RuntimeException("Respuesta no Exitosa");}
+            if (response.body() == null) { throw new RuntimeException("Cuerpo de Respuesta vacio"); }
 
-            assert response.body() != null;
-            rta  = response.body();
-
-            if(rta.parsedResults().size() > 1)
+            if(response.body().ParsedResults().size() > 1)
                 System.out.println("WARNING: OCRSpaceProxy recibio el analisis de mas de 1 imagen, pero se envio solo 1 imagen ");
 
-            if(rta.parsedResults().getFirst().parsedText().isEmpty())
+            if(response.body().ParsedResults().get(0).ParsedText().isEmpty())
                 return "";
 
-            assert rta.parsedResults().getFirst().txtOverlays()!= null;
-            if(!rta.parsedResults().getFirst().txtOverlays().isEmpty())
+            assert response.body().ParsedResults().get(0).TextOverlay()!= null;
+            if(!response.body().ParsedResults().get(0).TextOverlay().Lines().isEmpty())
                 System.out.println("WARNING: OCRSpaceProxy recibio el Text Overlay de alguna imagen");
+
+            return response.body().ParsedResults().get(0).ParsedText();
+
         }
         catch ( Exception e){
-            throw new RuntimeException("Fallo en la comunicacion con OCRSpace", e);
+            throw new RuntimeException("Fallo en la comunicacion con OCRSpace:" + e.getMessage());
         }
 
-        return rta.parsedResults().getFirst().parsedText();
     }
 }
